# connect4_robot

./: .gitignore  MICROSERVICES.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  config.py  orchestrator_service.py  pyproject.toml  requirements.txt  start_services.py  start_services.sh  web_service.py
game_engine/: __init__.py  ai_base.py  ai_minimax.py  ai_registry.py  board.py  messages.py  orchestrator.py  policy.py
motor_control/: __init__.py  end_effector.py  motor_stack.py  sim_motor.py
motor_control/firmware/connect_4_gantry/: LimitSwitch.h  Solenoid.h  connect_4_gantry.ino
motor_control/firmware/solenoid_control/: EndEffector.h  solenoid_control.ino
vision/: __init__.py  board.py  capture_image.py  circle_grid_locator.py  cnn_piece_classifier.py  config.py  connect4_tag_grid.py  debug_run.py  demo_crop_holes.py  detect_apriltags.py  detect_board_corners.py  detect_circle_grid.py  eval_both_classifiers.py  eval_classifier.py  filter_blue_from_image.py  label_grid_tool.py  label_roi_tool.py  learned_piece_classifier.py  make_apriltag.py  piece_color_classifier.py  roi_dataset_recorder.py  run_vision_polling.py  service.py  sim_service.py  sim_world.py  state_estimation.py  train_cnn_classifier.py  train_piece_classifier.py  vision_board_detector.py
vision/apriltags/: resize_tags.py
vision/vision_piece_dataset/models/: piece_cnn.pt  piece_random_forest.joblib
